[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bitcoincash-addr = "0.5.2"
clap = "4.5.27"
env_logger = "0.11.6"
failure = "0.1.8"
log = "0.4.25"
merkle-cbt = "0.3.2"
rand = "0.8.5"
rust-crypto = "0.2.36"
serde = "1.0.217"
serde_json = "1.0.137"
sha2 = "0.10.8"
sled = "0.34.7"
secp256k1 = { version = "0.28", features = ["rand", "global-context", "hashes"] }
hex = "0.4"
